# nbody

./: Cargo.toml  build.rs  diff.txt
src/: compute.wgsl  config.rs  draw.wgsl  fragment.wgsl  framework.rs  galaxygen.rs  gen.rs  lib.rs  main.rs  render.rs  shader.comp  shader.comp.spv  shader.vert  shader.vert.spv  shader.wgsl  state.rs  timo_render.rs  vertex.wgsl
src/render/: state.rs
src/render/state/: display.rs
src/state/: gen.rs  instance.rs  vertex.rs
